--- a/public/style.css
+++ b/public/style.css
@@ -5,3 +5,14 @@ h1 {
 	font-family: 'Work Sans', sans-serif;
 	font-weight: bold;
 }
+
+.nav {
+
+	top: 10px;
+	right: 20px;
+
+}
+
+#home{
+	font-size: 30px;
+}
