--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ font-family: 'IBM Plex Sans', sans-serif; */
 h1 {
 	font-family: 'Work Sans', sans-serif;
 	font-weight: bold;
-	font-size: 50px;
+  font-size: 50px;
 }
 
 h2 {
@@ -12,6 +12,18 @@ h2 {
 	font-size: 20px;
 }
 
+.nav {
+
+	top: 10px;
+	right: 20px;
+
+}
+
 p {
 	font-family: 'IBM Plex Sans', sans-serif;
+}
+
+#home {
+	font-size: 30px;
+	
 }
