--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>TrashTrack</title>
+	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-	<script src="main.js"></script>
+	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-	<header>
-		<a href="index.html"><img src="assets/Banner/Banner.png" width="750"></a>
-	</header>
+	<!--[if lt IE 7]>
+			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+		<![endif]-->
 
-	<div>
-		<h1>This is the app page</h1>
-		<h2>Click the header to go back to the home page</h2>
+	<div class="nav">
+		<a href="./index.html" style="text-decoration: none" id="home">Home</a>
 	</div>
 
+	<div class="searching_button" id="search">
+
+	</div>
+	<div id="text">
+		<a href="/app" style="text-decoration: none" id="browse">Browse Me</a>
+	</div>
+
+	<script src="" async defer></script>
 </body>
 
 </html>
