Button on the home page works now

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,6 @@
 	
 	<div class="spacing3"></div>
 	
-	<button type="submit" formaction="/browse"><a href="/browse">Browse for Anime</a></p></button>
+	<a class="link_button" href="/browse">Browse for Anime</a>
 	
 </div>
