--- a/public/style.css
+++ b/public/style.css
@@ -82,29 +82,10 @@ h3 {
 	font-size: 24pt;
 }
 
-button {
-	border: none;
-	border-radius: 1em;
-	padding: 1em 2em;
-	background-color: #02aaff;
-}
 
-button a {
+#site_banner {
 	display: inline-block;
-	font-weight: bold;
-	font-size: 12pt;
-	color: white;
-	text-decoration: none;
-	margin-top: 0.5em;
-}
-
-button:hover {
-	background-color: white;
-	cursor: pointer;
-}
-
-button:hover a {
-	color: #02aaff;
+	margin: 0 auto; 
 }
 
 
@@ -148,11 +129,25 @@ button:hover a {
 	margin-left: 2em;
 }
 
-
-#site_banner {
+.link_button {
 	display: inline-block;
-	margin: 0 auto; 
+	border: 0.125em white solid;
+	border-radius: 1em;
+	padding: 1em 2em;
+	text-decoration: none;
+	font-weight: bold;
+	font-size: 12pt;
+	color: white;
 }
+
+.link_button:hover {
+	background-color: #02aaff;
+	border: 0.125em #02aaff solid;
+	cursor: pointer;
+}
+
+
+
 
 
 
