--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -2,7 +2,7 @@
 
 	<div class="nav_left">
 	
-		<a class="nav_element" href="/">TrashTrack</a>
+		<a class="nav_element" href="/"><p class="logo_text logo_left">Trash</p><p class="logo_text logo_right">Track</p></a>
 		
 	</div>
 
