--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
 		<title>TrashTrack</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" media="screen" href="/style.css"/>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	</head>
