--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -4,14 +4,14 @@
 
 		<form action="/browse" method="get"> 
 		 
-			<input type="radio" id="type_shows" name="type" value="shows"> <label for="type_shows">Shows</label> <br>
+			<input type="radio" id="type_shows" name="type" value="shows" checked> <label for="type_shows">Shows</label> <br>
 			<input type="radio" id="type_characters" name="type" value="characters"> <label for="type_characters">Characters</label> <br>
 			<input type="radio" id="type_voiceActors" name="type" value="voiceActors"> <label for="type_voiceActors">Voice Actors</label> <br>
 			<input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label> <br>
 			
 			<br>
 		 
-			<input type="radio" id="season_any" name="season" value="any"> <label for="season_any">Any</label> <br>
+			<input type="radio" id="season_any" name="season" value="any" checked> <label for="season_any">Any</label> <br>
 			<input type="radio" id="season_fall" name="season" value="fall"> <label for="season_fall">Fall</label> <br>
 			<input type="radio" id="season_winter" name="season" value="winter"> <label for="season_winter">Winter</label> <br>
 			<input type="radio" id="season_spring" name="season" value="spring"> <label for="season_spring">Spring</label> <br>
@@ -32,7 +32,17 @@
 	 
 	 <div class="browse_results">
 	 
-		<p>DEBUG INTERFACE</p>
+		<p>DATABASE QUERY DEBUGGING</p>
+		
+		<table>
+			{{#each results}}
+				<tr>
+					{{#each this}}
+						<td>{{this}}</td>
+					{{/each}}
+				</tr>
+			{{/each}}
+		</table>
 	 
 	 </div>
 	
