--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -1,8 +1,49 @@
-<div class="main centered_text fades_in">
+<div class="main browse centered_text fades_in">
 
-	<div class="spacing5"></div>
+	<div class="browse_options"> 
 
-	<h2>Sorry, we are not done yet.</h2>
-	<h3>This feature is a work in progress.</h3>
+		<form action="/browse" method="get"> 
+		 
+			<input type="radio" id="type_shows" name="type" value="shows" checked> <label for="type_shows">Shows</label> <br>
+			<input type="radio" id="type_characters" name="type" value="characters"> <label for="type_characters">Characters</label> <br>
+			<input type="radio" id="type_voiceActors" name="type" value="voiceActors"> <label for="type_voiceActors">Voice Actors</label> <br>
+			<input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label> <br>
+			
+			<br>
+		 
+			<input type="radio" id="season_any" name="season" value="any" checked> <label for="season_any">Any</label> <br>
+			<input type="radio" id="season_fall" name="season" value="fall"> <label for="season_fall">Fall</label> <br>
+			<input type="radio" id="season_winter" name="season" value="winter"> <label for="season_winter">Winter</label> <br>
+			<input type="radio" id="season_spring" name="season" value="spring"> <label for="season_spring">Spring</label> <br>
+			<input type="radio" id="season_summer" name="season" value="summer"> <label for="season_summer">Summer</label> <br>
+			
+			<br>
+
+			<input type="text" id="year" name="year" value="{{max_year}}">
+			<label>Year</year>
+			
+			<br><br>
+			
+			<input type="submit" value="Submit">
+
+		 </form>
+		 
+	 </div>
+	 
+	 <div class="browse_results">
+	 
+		<p>DATABASE QUERY DEBUGGING</p>
+		
+		<table>
+			{{#each results}}
+				<tr>
+					{{#each this}}
+						<td>{{this}}</td>
+					{{/each}}
+				</tr>
+			{{/each}}
+		</table>
+	 
+	 </div>
 	
 </div>
