--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -4,9 +4,9 @@
 
 		<form action="/browse" method="get"> 
 		 
-			<input type="radio" id="type_shows" name="type" value="shows" checked> <label for="type_shows">Shows</label> <br>
-			<input type="radio" id="type_characters" name="type" value="characters"> <label for="type_characters">Characters</label> <br>
-			<input type="radio" id="type_voiceActors" name="type" value="voiceActors"> <label for="type_voiceActors">Voice Actors</label> <br>
+			<input type="radio" id="type_shows" name="type" value="show" checked> <label for="type_shows">Shows</label> <br>
+			<input type="radio" id="type_characters" name="type" value="character"> <label for="type_characters">Characters</label> <br>
+			<input type="radio" id="type_voiceActors" name="type" value="voice_actor"> <label for="type_voiceActors">Voice Actors</label> <br>
 			<input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label> <br>
 			
 			<br>
