--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -9,6 +9,7 @@
 	<div class="nav_right">
 	
 		<a class="nav_element nav_link" href="/">Home</a>
+		<a class="nav_element nav_link" href="/manage">Manage</a>
 		<a class="nav_element nav_link" href="/browse">Browse</a>
 		
 	</div>
