Got back to original codes

--- a/views/manage.handlebars
+++ b/views/manage.handlebars
@@ -6,6 +6,9 @@
 		<div class="manage_buttons">
 
 
+			<a class="link_button" href="/create">Create</a>
+			<a class="link_button" href="/update">Update</a>
+			<a class="link_button" href="/delete">Delete</a>
 
 		</div>
 
