Attempt to center buttons because im anal like that

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,17 +1,20 @@
 <div class="main nav">
 
 	<div class="nav_left">
-	
-		<a class="nav_element" href="/"><p class="logo_text logo_left">Trash</p><p class="logo_text logo_right">Track</p></a>
-		
+
+		<a class="nav_element" href="/">
+			<p class="logo_text logo_left">Trash</p>
+			<p class="logo_text logo_right">Track</p>
+		</a>
+
 	</div>
 
-	<div class="nav_right">
-	
+	<div class="nav_right centered_text">
+
 		<a class="nav_element nav_link" href="/">Home</a>
 		<a class="nav_element nav_link" href="/manage">Manage</a>
 		<a class="nav_element nav_link" href="/browse">Browse</a>
-		
+
 	</div>
 
 
