--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -9,7 +9,7 @@
 
 	</div>
 
-	<div class="nav_right centered_text">
+	<div class="nav_right">
 
 		<a class="nav_element nav_link" href="/">Home</a>
 		<a class="nav_element nav_link" href="/manage">Manage</a>
