oh shit i centered the wrong thing whoops

--- a/views/manage.handlebars
+++ b/views/manage.handlebars
@@ -1,9 +1,9 @@
-<div class = "main manage centered-text">
+<div class="main manage centered-text">
 
 
 	<div class="manage_options">
 
-		<div class="manage_buttons">
+		<div class="manage_buttons centered_div">
 
 
 			<a class="link_button" href="/create">Create</a>
