--- a/views/manage.handlebars
+++ b/views/manage.handlebars
@@ -1,19 +1,7 @@
-<div class="main manage centered-text">
+<div class="main manage centered_text">
 
-
-	<div class="manage_options">
-
-		<div class="manage_buttons centered_div">
-
-
-			<a class="link_button" href="/create">Create</a>
-			<a class="link_button" href="/update">Update</a>
-			<a class="link_button" href="/delete">Delete</a>
-
-		</div>
-
-
-	</div>
-
+	<a class="link_button" href="/create">Create</a>
+	<a class="link_button" href="/update">Update</a>
+	<a class="link_button" href="/delete">Delete</a>
 
 </div>
