Edited the text on Create

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -9,12 +9,12 @@
 		<form action="/create" method="get">
 
 			<input type="text" id="shows" value="Shows">Show Name <br>
-			<input type="text" id="characters" value="Characters">Show Characters <br>
+			<input type="text" id="characters" >Show Characters <br>
 
-			<input type="text" id="voice_actors" value="Voice Actors">Show Voice Actors <br>
-			<input type="text" id="studio" value="Show Studio">Show Studio <br>
+			<input type="text" id="voice_actors">Show Voice Actors <br>
+			<input type="text" id="studio" >Show Studio <br>
 
-			<input type="text" id="create_year" value="Show Year">Show Year <br>
+			<input type="text" id="create_year" >Show Year <br>
 
 			<br><h3>Seasons</h3><br>
 			<input type="radio" id="fall" name="season" value="fall"> <label for="fall">Fall</label> <br>
@@ -23,6 +23,7 @@
 			<input type="radio" id="summer" name="season" value="summer"> <label for="summer">Summer</label> <br>
 			
 
+			<br> <input type="submit" value="Submit"><br>
 		</form>
 
 	</div>
