Changed some stuff in manage view

--- a/views/manage.handlebars
+++ b/views/manage.handlebars
@@ -1,4 +1,6 @@
-<div class="main manage centered_text">
+<div class="main manage centered_text fades_in">
+
+	<h1>FOR ADMINISTRATORS ONLY!</h1>
 
 	<a class="link_button" href="/create">Create</a>
 	<a class="link_button" href="/update">Update</a>
