Edited the insert boxes

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -8,13 +8,13 @@
 
 		<form action="/create" method="get">
 
-			<input type="text" id="shows" value="Shows">Show Name <br>
-			<input type="text" id="characters" >Show Characters <br>
+			Show Name: <input type="text" id="shows" > <br>
+			Show Characters: <input type="text" id="characters" > <br>
 
-			<input type="text" id="voice_actors">Show Voice Actors <br>
-			<input type="text" id="studio" >Show Studio <br>
+			Show Voice Actors: <input type="text" id="voice_actors"> <br>
+			Show Studio: <input type="text" id="studio" > <br>
 
-			<input type="text" id="create_year" >Show Year <br>
+			Show Year: <input type="text" id="create_year" ><br>
 
 			<br><h3>Seasons</h3><br>
 			<input type="radio" id="fall" name="season" value="fall"> <label for="fall">Fall</label> <br>
