Added some spacing in manage view

--- a/views/manage.handlebars
+++ b/views/manage.handlebars
@@ -1,6 +1,8 @@
 <div class="main manage centered_text fades_in">
 
 	<h1>FOR ADMINISTRATORS ONLY!</h1>
+	
+	<div class="spacing2"></div>
 
 	<a class="link_button" href="/create">Create</a>
 	<a class="link_button" href="/update">Update</a>
