Changed text in manage view a little bit

--- a/views/manage.handlebars
+++ b/views/manage.handlebars
@@ -1,6 +1,6 @@
 <div class="main manage centered_text fades_in">
 
-	<h1>FOR ADMINISTRATORS ONLY!</h1>
+	<h1>ADMINISTRATORS ONLY</h1>
 	
 	<div class="spacing2"></div>
 
