--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -1,49 +1,51 @@
 <div class="main browse centered_text fades_in">
 
-	<div class="browse_options"> 
+	<div class="browse_options">
 
-		<form action="/browse" method="get"> 
-		 
+		<form action="/browse" method="get">
+
 			<input type="radio" id="type_shows" name="type" value="show" checked> <label for="type_shows">Shows</label> <br>
-			<input type="radio" id="type_characters" name="type" value="character"> <label for="type_characters">Characters</label> <br>
-			<input type="radio" id="type_voiceActors" name="type" value="voice_actor"> <label for="type_voiceActors">Voice Actors</label> <br>
-			<input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label> <br>
-			
+			<input type="radio" id="type_characters" name="type" value="character"> <label for="type_characters">Characters</label>
 			<br>
-		 
+			<input type="radio" id="type_voiceActors" name="type" value="voice_actor"> <label for="type_voiceActors">Voice
+				Actors</label> <br>
+			<input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label> <br>
+
+			<br>
+
 			<input type="radio" id="season_any" name="season" value="any" checked> <label for="season_any">Any</label> <br>
 			<input type="radio" id="season_fall" name="season" value="fall"> <label for="season_fall">Fall</label> <br>
 			<input type="radio" id="season_winter" name="season" value="winter"> <label for="season_winter">Winter</label> <br>
 			<input type="radio" id="season_spring" name="season" value="spring"> <label for="season_spring">Spring</label> <br>
 			<input type="radio" id="season_summer" name="season" value="summer"> <label for="season_summer">Summer</label> <br>
-			
+
 			<br>
 
-			<input type="text" id="year" name="year" value="{{max_year}}">
+			<input type="number" id="year" name="year" value="{{max_year}}">
 			<label>Year</year>
-			
-			<br><br>
-			
-			<input type="submit" value="Submit">
 
-		 </form>
-		 
-	 </div>
-	 
-	 <div class="browse_results">
-	 
+				<br><br>
+
+				<input type="submit" value="Submit">
+
+		</form>
+
+	</div>
+
+	<div class="browse_results">
+
 		<p>DATABASE QUERY DEBUGGING</p>
-		
+
 		<table>
 			{{#each results}}
-				<tr>
-					{{#each this}}
-						<td>{{this}}</td>
-					{{/each}}
-				</tr>
+			<tr>
+				{{#each this}}
+				<td>{{this}}</td>
+				{{/each}}
+			</tr>
 			{{/each}}
 		</table>
-	 
-	 </div>
-	
+
+	</div>
+
 </div>
