Added first and last name

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -9,7 +9,8 @@
 		<form action="/create" method="get">
 
 			Show Name:<input type="text" id="shows" > <br>
-			Show Characters:<input type="text" id="characters" > <br>
+			Show Character's First Name:<input type="text" id="characters_first" > <br>
+			Show Character's Last Name:<input type="text" id="characters_last" > <br>
 
 			Show Voice Actors:<input type="text" id="voice_actors"> <br>
 			Show Studio: <input type="text" id="studio" > <br>
