Added voice actor first and last

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -12,7 +12,8 @@
 			Show Character's First Name:<input type="text" id="characters_first" > <br>
 			Show Character's Last Name:<input type="text" id="characters_last" > <br>
 
-			Show Voice Actors:<input type="text" id="voice_actors"> <br>
+			Show Voice Actors First Name:<input type="text" id="voice_actors_first"> <br>
+			Show Voice Actors Last Name:<input type="text" id="voice_actors_last"> <br>
 			Show Studio: <input type="text" id="studio" > <br>
 
 			Show Year:<input type="text" id="create_year" ><br>
