--- a/public/style.css
+++ b/public/style.css
@@ -164,6 +164,10 @@ input {
 	cursor: pointer;
 }
 
+input[type=radio] {
+	visibility: hidden;
+}
+
 /* for debugging database queries */
 
 .browse_options input {
