--- a/public/style.css
+++ b/public/style.css
@@ -146,6 +146,14 @@ td {
 	/* border: 1px red dashed; */
 }
 
+.filter_group {
+	border-radius: 3px;
+	color: rgb(var(133, 150, 165);
+	font-size: 1.4rem;
+	margin-bottom: 8px;
+	padding: 5px 10px;
+}
+
 .browse_results {
 	box-sizing: border-box;
 	display: inline-block;
