--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -5,29 +5,20 @@
 
 			<form action="/browse" method="get">
 
-				<div class="radio_button"><input type="radio" id="type_shows" name="type" value="show" checked> <label for="type_shows">Shows</label>
-					<br> </div>
-				<div class="radio_button"><input type="radio" id="type_characters" name="type" value="character"> <label for="type_characters">Characters</label>
-				</div>
+				<input type="radio" id="type_shows" name="type" value="show" checked> <label for="type_shows">Shows</label> <br>
+				<input type="radio" id="type_characters" name="type" value="character"> <label for="type_characters">Characters</label>
 				<br>
-				<div class="radio_button"><input type="radio" id="type_voiceActors" name="type" value="voice_actor"> <label for="type_voiceActors">Voice
-				</div>
-				Actors</label> <br>
-				<div class="radio_button"><input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label>
-					<br> </div>
+				<input type="radio" id="type_voiceActors" name="type" value="voice_actor"> <label for="type_voiceActors">Voice
+					Actors</label> <br>
+				<input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label> <br>
 
 				<br>
 
-				<div class="radio_button"><input type="radio" id="season_any" name="season" value="any" checked> <label for="season_any">Any</label>
-					<br> </div>
-				<div class="radio_button"><input type="radio" id="season_fall" name="season" value="fall"> <label for="season_fall">Fall</label>
-					<br> </div>
-				<div class="radio_button"><input type="radio" id="season_winter" name="season" value="winter"> <label for="season_winter">Winter</label>
-					<br> </div>
-				<div class="radio_button"><input type="radio" id="season_spring" name="season" value="spring"> <label for="season_spring">Spring</label>
-					<br> </div>
-				<div class="radio_button"><input type="radio" id="season_summer" name="season" value="summer"> <label for="season_summer">Summer</label>
-					<br> </div>
+				<input type="radio" id="season_any" name="season" value="any" checked> <label for="season_any">Any</label> <br>
+				<input type="radio" id="season_fall" name="season" value="fall"> <label for="season_fall">Fall</label> <br>
+				<input type="radio" id="season_winter" name="season" value="winter"> <label for="season_winter">Winter</label> <br>
+				<input type="radio" id="season_spring" name="season" value="spring"> <label for="season_spring">Spring</label> <br>
+				<input type="radio" id="season_summer" name="season" value="summer"> <label for="season_summer">Summer</label> <br>
 
 		</div>
 
