--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -5,6 +5,8 @@
 
 			<form action="/browse" method="get">
 
+				<p>Category</p>
+
 				<input type="radio" id="type_shows" name="type" value="show" checked> <label for="type_shows">Shows</label> <br>
 				<input type="radio" id="type_characters" name="type" value="character"> <label for="type_characters">Characters</label>
 				<br>
@@ -13,6 +15,8 @@
 				<input type="radio" id="type_studio" name="type" value="studio"> <label for="type_studio">Studios</label> <br>
 
 				<br>
+
+				<p>Season</p>
 
 				<input type="radio" id="season_any" name="season" value="any" checked> <label for="season_any">Any</label> <br>
 				<input type="radio" id="season_fall" name="season" value="fall"> <label for="season_fall">Fall</label> <br>
