I dont know what I am doing

--- a/public/style.css
+++ b/public/style.css
@@ -154,6 +154,10 @@ td {
 	width: 75%;
 }
 
+.filter_header {
+	border-bottom: 5px #02aaff;
+}
+
 .filter_group label {
 	cursor: pointer;
 	display: inline-block;
