--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -5,7 +5,7 @@
 
 			<form action="/browse" method="get">
 
-				<p>Category</p>
+				<p class="filter_header">Category</p>
 
 				<input type="radio" id="type_shows" name="type" value="show" checked> <label for="type_shows">Shows</label> <br>
 				<input type="radio" id="type_characters" name="type" value="character"> <label for="type_characters">Characters</label>
@@ -16,7 +16,7 @@
 
 				<br>
 
-				<p>Season</p>
+				<p class="filter_header">Season</p>
 
 				<input type="radio" id="season_any" name="season" value="any" checked> <label for="season_any">Any</label> <br>
 				<input type="radio" id="season_fall" name="season" value="fall"> <label for="season_fall">Fall</label> <br>
