--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -28,14 +28,16 @@
 
 		<br>
 
-		<input type="number" id="year" name="year" value="{{max_year}}">
-		<label>Year</year>
+		<p class="filter_header">Year</p>
+		<div class="year_group">
+			<input type="number" id="year" name="year" value="{{max_year}}">
+		</div>
 
-			<br><br>
+		<br><br>
 
-			<input type="submit" value="Submit">
+		<input type="submit" value="Submit">
 
-			</form>
+		</form>
 
 	</div>
 
