--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -33,7 +33,7 @@
 
 				<br><br>
 
-				<input type="submit" value="Submit">
+				<input class="link_button" type="submit" value="Submit">
 
 			</form>
 
