--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -6,23 +6,23 @@
 
 			<h2>Create</h2>
 
-		<form action="/create" method="get">
+		<form action="/create" method="post">
 
-			Show Name:<input type="text" id="shows" > <br>
-			Show Character's First Name:<input type="text" id="characters_first" > <br>
-			Show Character's Last Name:<input type="text" id="characters_last" > <br>
+			Show Name:<input type="text" id="shows" name="show"> <br>
+			Show Character's First Name:<input type="text" id="characters_first" name="char_first" > <br>
+			Show Character's Last Name:<input type="text" id="characters_last" name="char_last"> <br>
 
-			Show Voice Actors First Name:<input type="text" id="voice_actors_first"> <br>
-			Show Voice Actors Last Name:<input type="text" id="voice_actors_last"> <br>
-			Show Studio: <input type="text" id="studio" > <br>
+			Show Voice Actors First Name:<input type="text" id="voice_actors_first" name="voice_first"> <br>
+			Show Voice Actors Last Name:<input type="text" id="voice_actors_last" name="voice_last"> <br>
+			Show Studio: <input type="text" id="studio" name="studio" > <br>
 
-			Show Year:<input type="text" id="create_year" ><br>
+			Show Year:<input type="text" id="create_year" name="year"><br>
 
 			<br><h3>Seasons</h3><br>
-			<input type="radio" id="fall" name="season" value="fall"> <label for="fall">Fall</label> <br>
-			<input type="radio" id="winter" name="season" value="winter"> <label for="winter">Winter</label> <br>
-			<input type="radio" id="spring" name="season" value="spring"> <label for="spring">Spring</label> <br>
-			<input type="radio" id="summer" name="season" value="summer"> <label for="summer">Summer</label> <br>
+			<input type="radio" id="fall" name="season" value="fall" name="season"> <label for="fall">Fall</label> <br>
+			<input type="radio" id="winter" name="season" value="winter" name="season"> <label for="winter">Winter</label> <br>
+			<input type="radio" id="spring" name="season" value="spring" name="season"> <label for="spring">Spring</label> <br>
+			<input type="radio" id="summer" name="season" value="summer" name="season"> <label for="summer">Summer</label> <br>
 			
 
 			<br> <input type="submit" value="Submit"><br>
