--- a/public/style.css
+++ b/public/style.css
@@ -120,6 +120,9 @@ td {
 #site_banner {
 	display: inline-block;
 	margin: 0 auto;
+
+	-webkit-filter: drop-shadow(0px 0px 50px rgba(0, 0, 0, 0.69));
+	filter: drop-shadow(0px 0px 50px rgba(0, 0, 0, 0.69));
 }
 
 
