--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -6,7 +6,7 @@
 
 			<h2>Create</h2>
 
-		<form action="/create" method="get">
+		<form action="/create" method="post">
 
 			Show Name:<input type="text" id="shows" name="show"> <br>
 			Show Character's First Name:<input type="text" id="characters_first" name="char_first" > <br>
