--- a/public/style.css
+++ b/public/style.css
@@ -117,7 +117,7 @@ td {
 
 th {
 	color: #02aaff;
-	background-color: rgba(0, 0, 0, 0.1); 
+	background-color: rgba(0, 0, 0, 0.1);
 	text-transform: capitalize;
 }
 
@@ -166,7 +166,7 @@ th {
 }
 
 .filter_header {
-	border-bottom: 0.1em solid #02aaff;
+	border-bottom: 1px solid #02aaff;
 	padding-bottom: 0.5em;
 	font-weight: bolder;
 }
@@ -328,4 +328,32 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
+}
+
+/* ADMIN TOOLPANEL */
+.admin-toolpanel {
+	margin: auto;
+	width: 50%;
+	padding: 10px;
+}
+
+.admin-toolpanel label {
+	display: inline-block;
+	float: left;
+	clear: left;
+	width: 250px;
+	text-align: right;
+	padding-right: 1em;
+}
+
+.admin-toolpanel input {
+	display: inline-block;
+	float: left;
+}
+
+#admin_submit {
+	display: inline-block;
+	float: left;
+	clear: left;
+	margin-left: 45%;
 }
