Cleaned up CSS a bit, changed font in tables

--- a/public/style.css
+++ b/public/style.css
@@ -65,7 +65,6 @@ h3,
 label {
 	color: rgb(191, 191, 191);
 	margin: 0;
-
 }
 
 a {
@@ -112,7 +111,8 @@ th,
 td {
 	padding: 0.5em;
 	border: 0.1em rgba(255, 255, 255, 0.1) solid;
-	border-radius: 0.25em;
+	font-family: 'IBM Plex Sans', sans-serif;
+	font-size: 12pt;
 }
 
 th {
@@ -153,6 +153,10 @@ th {
 	width: 19.5%;
 	float: left;
 	text-align: left;
+}
+
+.browse_options .link_button {
+	margin: 0;
 }
 
 /* Start of left module styling */
@@ -236,21 +240,6 @@ input[type=submit] {
 	border: 0.1em rgba(255, 255, 255, 0.1) solid;
 	border-radius: 1em;
 }
-
-/* for debugging database queries */
-
-.browse_options input {
-	margin: 0;
-	margin-bottom: 0.5em;
-	margin-right: 0.5em;
-}
-
-.browse_options input[type="text"] {
-	width: 5em;
-	text-align: center;
-}
-
-/* for debugging database queries */
 
 
 .nav {
